<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pedrito.delivery.Cadastro"
    android:background="@color/BackGroudAPP">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="NotSibling,UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="67dp"
        android:layout_marginEnd="67dp">

        <TableRow
            android:id="@+id/TableNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNome"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/CadastrarNomeId"
                android:textSize="25sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editNomeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f9eea0"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/TableEndereco"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadastrarEnderecoId"
                android:textSize="25sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editEnderecoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f9eea0"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/TableNcasa"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNumeroCasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadastrarNumeroCasaId"
                android:textSize="25sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editNumeroId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f9eea0"
                android:ems="10"
                android:inputType="number"
                    />
        </TableRow>

        <TableRow
            android:id="@+id/editCidade"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadastrarCidadeId"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editCidadeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f9eea0"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/TableTelefone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadastrarTelefoneId"
                android:textSize="25sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editTelefoneId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f9eea0"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/TableEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadastrarEmailId"
                android:textSize="25sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editEmailId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f9eea0"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:id="@+id/TableSenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadastrarSenhaId"
                android:textSize="25sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editSenhaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f9eea0"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/TableAux"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/EspacoBranco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

            </RelativeLayout>

            <Button
                android:id="@+id/BotaoCadastrarId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="14dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/BotaoCadastrar"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

        </TableRow>

    </TableLayout>

</RelativeLayout>